apps/bytestash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bytestash
  namespace: bytestash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bytestash
  template:
    metadata:
      labels:
        app: bytestash
        security.policy/allow-root: "true"
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      securityContext:
        runAsNonRoot: false
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: bytestash
          image: "ghcr.io/jordan-dalby/bytestash:pr-332"
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: bytestash-storage
              mountPath: /data/snippets
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: false
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: bytestash-storage
          persistentVolumeClaim:
            claimName: bytestash-pvc
