apps/bytestash/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bytestash
  namespace: bytestash
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-edge-gateway
      namespace: cilium-ingress
  hostnames:
    - snippets.gwg313.xyz
    - snippets.local.gwg313.xyz
    - snippets.zerotier.gwg313.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: bytestash
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-bytestash
  namespace: bytestash
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium-ingress
  to:
    - group: ""
      kind: Service
      name: bytestash
